# odontoflow

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: create_tenant.py
backend/src/odontoflow/analytics/domain/: models.py
backend/src/odontoflow/api/: deps.py  main.py  seed.py
backend/src/odontoflow/shared/: auth.py  event_bus.py  tenant.py
backend/tests/: conftest.py
backend/tests/unit/: test_entity_base.py  test_event_bus.py  test_value_objects.py
backend/tests/unit/analytics/: test_analytics_domain.py
backend/tests/unit/billing/: test_billing_commands.py  test_billing_domain.py
backend/tests/unit/clinical/: test_clinical_commands.py  test_clinical_domain.py
backend/tests/unit/communication/: test_communication_commands.py  test_communication_domain.py
backend/tests/unit/insurance/: test_insurance_commands.py  test_insurance_domain.py
backend/tests/unit/inventory/: test_inventory_commands.py  test_inventory_domain.py
backend/tests/unit/patient/: test_patient_commands.py  test_patient_domain.py
backend/tests/unit/scheduling/: test_scheduling_commands.py  test_scheduling_domain.py
backend/tests/unit/staff/: test_staff_commands.py  test_staff_domain.py
backend/tests/unit/treatment/: test_treatment_commands.py  test_treatment_domain.py
backend/tests/unit/website/: test_website_commands.py  test_website_domain.py
frontend/: Dockerfile  (+4 more)
(+195 files in other folders)
